--- a/human-resources-project/src/index.css
+++ b/human-resources-project/src/index.css
@@ -1,13 +1,165 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
+:root {
+  --maviton4: #1a1e75;
+ --maviton3: #2e48a7;
+ --maviton2: #476fc2;
+ --maviton1: #6e97da;
+ --beyaz:  #e5edf6;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Lexend", sans-serif;
+  background-image: url('https://img.freepik.com/free-photo/gray-abstract-wireframe-technology-background_53876-101941.jpg?w=900&t=st=1714904620~exp=1714905220~hmac=ba48e5c5bdecf58b5bc7733635166ac4f8986bebc8ff25185dcd91d6a1ccfec5');
+  background-size: cover;
+  background-repeat: repeat;
+}
+.line {
+  width: 100%; 
+  height: 1px;
+  background-color: #ccc;
+  margin: 20px 0; 
+}
+.feature{
+  margin: 20px; 
+}
+.feature-img-icon{
+  max-width: 100%; 
+  max-height: 100%; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  max-width: 540px;
+  width: 100%;
 }
+.feature-p{
+  display: block;
+  font-weight: 300;
+  padding-left: 0%;
+  color: #666;
+  line-height: 1.6;
+  max-width: 100%; 
+  margin: 0 auto; 
+  word-break: break-word; 
+}
+.feature-t{
+  color: var(--maviton3);
+}
+.container {
+  max-width: 90%; 
+  margin: 0 auto; 
+  padding: 20px; 
+}
+.row {
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: center;
+  align-items: flex-start; 
+  gap: 20px; 
+}
+.col-sm-4 col-lg-3 {
+  flex: 1 0 auto; 
+}
+button {
+  background-color: var(--maviton4);
+  color: white;
+}
+#about-title{
+  font-weight: 400;
+  font-size: xx-large;
+  color: var(--beyaz);
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+h1{
+  font-weight: 500;
+  font-size: xx-large;
+  color: var(--maviton4);
+}
+#about-text{
+  font-weight: 400;
+  font-size: large;
+  color: #9ab6ef;
+  margin-bottom: 10px;
+  opacity: 0;
+  transition: opacity 0.5s ease, margin-bottom 0.5s ease;
+  line-height: 1.6;
+}
+.animate-on-scroll {
+  animation: fadeIn 1s ease forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+p{
+  color: #2e48a7;
+}
+title{
+  color: #1a1e75;
+}
+.card-title {
+  color: #1a1e75; 
+  font-weight: 700;
+}
+.about-container{
+  background-color: #1a1e75;
+  min-height: 70%;
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+.references-container, .container-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+  text-align: center; 
+}
+
+.references-list {
+  display: flex; /* Kutuları yatay olarak sırala */
+  transition: transform 0.5s ease; /* Animasyon için geçiş efekti */
+}
+
+.reference-item {
+  width: 150px; /* Kutu genişliği */
+  height: 100px; /* Kutu yüksekliği */
+  margin-right: 10px; /* Kutular arasındaki boşluk */
+  background-size: contain; /* Arka plan resmini uygun şekilde boyutlandır */
+  background-repeat: no-repeat; /* Arka plan resmini tekrar etme */
+  background-position: center; /* Arka plan resmini kutu içinde ortala */
+}
+
+.prev-btn,
+.next-btn {
+  position: absolute; /* Mutlaka konumlandırılmış */
+  top: 50%; /* Üst kenarın yarısına hizala */
+  transform: translateY(-50%); /* Dikey olarak ortala */
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.prev-btn {
+  left: 0; /* Sol kenara yerleştir */
+}
+
+.next-btn {
+  right: 0; /* Sağ kenara yerleştir */
+}
+.custom-button:hover {
+  background-color: var(--maviton1); /* Hover durumunda arkaplan rengini değiştir */
+  color: var(--maviton4);
+}
+
+
