--- a/human-resources-project/src/pages/Login/Login.css
+++ b/human-resources-project/src/pages/Login/Login.css
@@ -1,26 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-	font-family: 'Montserrat', sans-serif;
-}
-
-body,
-input {
-  font-family: 'Montserrat', sans-serif;
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  background-color: #fff;
-  min-height: 100vh;
-  overflow: hidden;
-}
-
 .forms-container {
   position: absolute;
   width: 100%;
@@ -35,7 +14,6 @@ input {
   transform: translate(-50%, -50%);
   left: 75%;
   width: 50%;
-  transition: 1s 0.7s ease-in-out;
   display: grid;
   grid-template-columns: 1fr;
   z-index: 5;
@@ -52,22 +30,18 @@ form {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
-
 form.sign-up-form {
   opacity: 0;
   z-index: 1;
 }
-
 form.sign-in-form {
   z-index: 2;
 }
-
 .title {
   font-size: 2.2rem;
   color: #444;
   margin-bottom: 10px;
 }
-
 .input-field {
   max-width: 380px;
   width: 100%;
@@ -80,7 +54,6 @@ form.sign-in-form {
   padding: 0 0.4rem;
   position: relative;
 }
-
 .input-field i {
   text-align: center;
   line-height: 55px;
@@ -88,7 +61,6 @@ form.sign-in-form {
   transition: 0.5s;
   font-size: 1.1rem;
 }
-
 .input-field input {
   background: none;
   outline: none;
@@ -98,12 +70,10 @@ form.sign-in-form {
   font-size: 1.1rem;
   color: #333;
 }
-
 .input-field input::placeholder {
   color: #aaa;
   font-weight: 500;
 }
-
 .input-field select {
   background: none;
   outline: none;
@@ -112,10 +82,7 @@ form.sign-in-form {
   font-weight: 500;
   font-size: 1.1rem;
   color: #acacac;
-  
-  
 }
-
 .input-field select option {
   font-weight: 300;
   color: #acacac;
@@ -126,11 +93,8 @@ form.sign-in-form {
   color: #aaa;
   font-weight: 500;
 }
-
-
 .btn {
   width: 150px;
-  background-color: #f98c39;
   border: none;
   outline: none;
   height: 49px;
@@ -141,11 +105,9 @@ form.sign-in-form {
   margin: 10px 0;
   cursor: pointer;
   transition: 0.5s;
+  background-color: #1a1e75;
 }
 
-.btn:hover {
-  background-color: #f98c39;
-}
 .panels-container {
   position: absolute;
   height: 100%;
@@ -156,25 +118,6 @@ form.sign-in-form {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.container:before {
-  content: "";
-  position: absolute;
-  height: 2000px;
-  width: 2000px;
-  top: -10%;
-  right: 50%;
-  transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #F86F03 0%, #FFA41B 100%);
-  transition: 1.8s ease-in-out;
-  border-radius: 50%;
-  z-index: 6;
-}
-
-.image {
-  width: 100%;
-  transition: transform 1.1s ease-in-out;
-  transition-delay: 0.4s;
-}
 
 .panel {
   display: flex;
@@ -221,176 +164,6 @@ form.sign-in-form {
   font-weight: 600;
   font-size: 0.8rem;
 }
-
-.right-panel .image,
-.right-panel .content {
-  transform: translateX(800px);
-}
-
-/* ANIMATION */
-
-.container.sign-up-mode:before {
-  transform: translate(100%, -50%);
-  right: 52%;
-}
-
-.container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content {
-  transform: translateX(-800px);
-}
-
-.container.sign-up-mode .signin-signup {
-  left: 25%;
-}
-
-.container.sign-up-mode form.sign-up-form {
-  opacity: 1;
-  z-index: 2;
-}
-
-.container.sign-up-mode form.sign-in-form {
-  opacity: 0;
-  z-index: 1;
-}
-
-.container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content {
-  transform: translateX(0%);
-}
-
-.container.sign-up-mode .left-panel {
-  pointer-events: none;
-}
-
-.container.sign-up-mode .right-panel {
-  pointer-events: all;
-}
-
-@media (max-width: 870px) {
-  .container {
-    min-height: 800px;
-    height: 100vh;
-  }
-  .signin-signup {
-    width: 100%;
-    top: 95%;
-    transform: translate(-50%, -100%);
-    transition: 1s 0.8s ease-in-out;
-  }
-
-  .signin-signup,
-  .container.sign-up-mode .signin-signup {
-    left: 50%;
-  }
-
-  .panels-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-  }
-
-  .panel {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2.5rem 8%;
-    grid-column: 1 / 2;
-  }
-
-  .right-panel {
-    grid-row: 3 / 4;
-  }
-
-  .left-panel {
-    grid-row: 1 / 2;
-  }
-
-  .image {
-    width: 200px;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.6s;
-  }
-
-  .panel .content {
-    padding-right: 15%;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.8s;
-  }
-
-  .panel h3 {
-    font-size: 1.2rem;
-  }
-
-  .panel p {
-    font-size: 0.7rem;
-    padding: 0.5rem 0;
-  }
-
-  .btn.transparent {
-    width: 110px;
-    height: 35px;
-    font-size: 0.7rem;
-  }
-
-  .container:before {
-    width: 1500px;
-    height: 1500px;
-    transform: translateX(-50%);
-    left: 30%;
-    bottom: 68%;
-    right: initial;
-    top: initial;
-    transition: 2s ease-in-out;
-  }
-
-  .container.sign-up-mode:before {
-    transform: translate(-50%, 100%);
-    bottom: 32%;
-    right: initial;
-  }
-
-  .container.sign-up-mode .left-panel .image,
-  .container.sign-up-mode .left-panel .content {
-    transform: translateY(-300px);
-  }
-
-  .container.sign-up-mode .right-panel .image,
-  .container.sign-up-mode .right-panel .content {
-    transform: translateY(0px);
-  }
-
-  .right-panel .image,
-  .right-panel .content {
-    transform: translateY(300px);
-  }
-
-  .container.sign-up-mode .signin-signup {
-    top: 5%;
-    transform: translate(-50%, 0);
-  }
-}
-
-@media (max-width: 570px) {
-  form {
-    padding: 0 1.5rem;
-  }
-
-  .image {
-    display: none;
-  }
-  .panel .content {
-    padding: 0.5rem 1rem;
-  }
-  .container {
-    padding: 1.5rem;
-  }
-
-  .container:before {
-    bottom: 72%;
-    left: 50%;
-  }
-
-  .container.sign-up-mode:before {
-    bottom: 28%;
-    left: 50%;
-  }
+button:hover{
+  background-color: #476fc2;
 }
