--- a/human-resources-project/src/pages/Register/Register.css
+++ b/human-resources-project/src/pages/Register/Register.css
@@ -1,27 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-	font-family: 'Montserrat', sans-serif;
-}
-
-body,
-input {
-  font-family: 'Montserrat', sans-serif;
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  background-image: url('https://plus.unsplash.com/premium_photo-1705091301960-e33c3b7e8927?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-  background-size: cover; 
-  background-position: center; 
-  min-height: 100vh;
-  overflow: hidden;
-}
 
 .forms-container {
   position: absolute;
@@ -30,7 +6,6 @@ input {
   top: 0;
   left: 0;
 }
-
 .signin-signup {
   position: absolute;
   top: 50%;
@@ -42,7 +17,6 @@ input {
   grid-template-columns: 1fr;
   z-index: 5;
 }
-
 form {
   display: flex;
   align-items: center;
@@ -63,12 +37,6 @@ form.sign-in-form {
 form.sign-in-form:hover {
     box-shadow: 5px 7px 7px 7px #acacac;
   }
-
-.title {
-  font-size: 2.2rem;
-  color: #444;
-  margin-bottom: 10px;
-}
 
 .input-field {
   max-width: 380px;
@@ -109,7 +77,7 @@ form.sign-in-form:hover {
 
 .btn {
   width: 150px;
-  background-color: #F86F03;
+  background-color: #8e00fb;
   border: none;
   outline: none;
   height: 49px;
@@ -123,7 +91,7 @@ form.sign-in-form:hover {
 }
 
 .btn:hover {
-  background-color: #f98c39;
+  background-color: #8e00fb;
 }
 .panels-container {
   position: absolute;
@@ -133,26 +101,6 @@ form.sign-in-form:hover {
   left: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
-
-.container:before {
-  content: "";
-  position: absolute;
-  height: 1000px;
-  width: 1000px;
-  top: 0%;
-  right: 70%;
-  transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #F86F03 0%, #FFA41B 100%);
-  transition: 1.8s ease-in-out;
-  border-radius: 50%;
-  z-index: 6;
-}
-
-.image {
-  width: 100%;
-  transition: transform 1.1s ease-in-out;
-  transition-delay: 0.4s;
 }
 
 .btn.transparent {
@@ -166,105 +114,10 @@ form.sign-in-form:hover {
 }
 
 
-/* ANIMATION */
 
-.container.sign-up-mode:before {
-  transform: translate(100%, -50%);
-  right: 52%;
-}
 
-.container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content {
-  transform: translateX(-800px);
-}
 
-.container.sign-up-mode .signin-signup {
-  left: 25%;
-}
 
-.container.sign-up-mode form.sign-up-form {
-  opacity: 1;
-  z-index: 2;
-}
+  
 
-.container.sign-up-mode form.sign-in-form {
-  opacity: 0;
-  z-index: 1;
-}
 
-@media (max-width: 870px) {
-  .container {
-    min-height: 800px;
-    height: 100vh;
-  }
-  .signin-signup {
-    width: 100%;
-    top: 95%;
-    transform: translate(-50%, -100%);
-    transition: 1s 0.8s ease-in-out;
-  }
-
-  .signin-signup,
-  .container.sign-up-mode .signin-signup {
-    left: 50%;
-  }
-
-  .image {
-    width: 200px;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.6s;
-  }
- 
-
-  .btn.transparent {
-    width: 110px;
-    height: 35px;
-    font-size: 0.7rem;
-  }
-
-  .container:before {
-    width: 1500px;
-    height: 1500px;
-    transform: translateX(-50%);
-    left: 30%;
-    bottom: 68%;
-    right: initial;
-    top: initial;
-    transition: 2s ease-in-out;
-  }
-
-  .container.sign-up-mode:before {
-    transform: translate(-50%, 100%);
-    bottom: 32%;
-    right: initial;
-  }
-
-  .container.sign-up-mode .signin-signup {
-    top: 5%;
-    transform: translate(-50%, 0);
-  }
-}
-
-@media (max-width: 570px) {
-  form {
-    padding: 0 1.5rem;
-  }
-
-  .image {
-    display: none;
-  }
-
-  .container {
-    padding: 1.5rem;
-  }
-
-  .container:before {
-    bottom: 72%;
-    left: 50%;
-  }
-
-  .container.sign-up-mode:before {
-    bottom: 28%;
-    left: 50%;
-  }
-}
