--- a/human-resources-project/src/pages/Company/Company.css
+++ b/human-resources-project/src/pages/Company/Company.css
@@ -7,7 +7,7 @@
   align-items: center;
   position: absolute;
   top: 0;
-  height: 40px;
+  height: 50px;
   width: 100%;
   z-index: 100;
   left: 0;
@@ -25,10 +25,30 @@
   display: flex;
   flex-wrap: wrap; 
   justify-content: center;
-  margin-top: 15%;
+  margin-top: 17%;
+}
+
+.inpt {
+  height: 30px;
+  width: 500px;
+
+}
+
+.lbl{
+  margin-top: 15px;
+}
+.column-update{
+  padding-top: 20px;
+}
+
+.btn:hover{
+  background-color: #3e54a3;
 }
 
 .logo-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   cursor: pointer;
   text-align: center;
   margin-bottom: 20px;
@@ -39,6 +59,14 @@
   margin-left: 30px;
   width: 60px;
   height: 60px;
+}
+
+.logo-labels {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #2e48a7;
+  margin-left: 25px;
 }
 
 .user-card {
@@ -90,6 +118,7 @@
 .menu-list li {
   padding: 10px;
   border-bottom: 1px solid #ddd;
+  font-size: 15px;
 }
 
 .menu-list li:hover {
@@ -108,6 +137,7 @@
 .company-table {
   border-collapse: collapse;
   width: 100%;
+  margin-top: 25px;
  
 }
 
@@ -122,7 +152,8 @@
 .company-table th {
   background-color: #f2f2f2;
   font-weight: bold;
-  width: 50%;
+  font-size: 14px;
+  width: 40%;
 }
 
 
