--- a/human-resources-project/src/pages/Company/Company.css
+++ b/human-resources-project/src/pages/Company/Company.css
@@ -50,6 +50,31 @@
   background-color: #3e54a3;
 }
 
+.btn-app{
+  background-color:#1a1e75;
+  color: #fff ;
+  width: 100px;
+  border: none;
+  outline: none;
+  height: 30px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.btn-app:hover{
+  background-color: var(--maviton2); /* Hover durumunda arkaplan rengi değişecek */
+  color: var(--maviton4);
+}
+
+.wh{
+  width: 150px;
+  height: 40px;
+}
+
 .logo-container {
   display: flex;
   flex-direction: column;
