--- a/human-resources-project/src/pages/Login/Login.css
+++ b/human-resources-project/src/pages/Login/Login.css
@@ -39,7 +39,7 @@ form.sign-in-form {
 }
 .title {
   font-size: 2.2rem;
-  color: #444;
+  color: #333;
   margin-bottom: 10px;
 }
 .input-field {
@@ -165,6 +165,27 @@ form.sign-in-form {
   font-size: 0.8rem;
 }
 
+.btn-login{
+  background-color:#1a1e75;
+  color: #fff ;
+  width: 150px;
+  border: none;
+  outline: none;
+  height: 49px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.btn-login:hover{
+  background-color: var(--maviton2); /* Hover durumunda arkaplan rengi değişecek */
+  color: var(--maviton4);
+
+}
+
 .custom-button {
   color: white;
   background-color: var(--maviton4);
@@ -174,4 +195,11 @@ form.sign-in-form {
 .custom-button:hover {
   background-color: var(--maviton2); /* Hover durumunda arkaplan rengi değişecek */
   color: var(--maviton4);
+}
+
+.cnt{
+  color: #333;
+}
+.cnt-p{
+  color: #5b5858;
 }
